# open-atp

./: .env.example  .gitignore  AGENTS.md  README.ja.md  README.md  README.zh-CN.md  THIRD-PARTY-LICENSES.txt  flare  lefthook.yml  pyproject.toml
.github/workflows/: claude.yml
docs/: PHASE3_AGENTPROVER.md  conf.py  datasets.md  harnesses.yaml  index.md  installation.md  provers.yaml
docs/_ext/: provers_table.py
docs/agent_harness/: claude_code.md  codex.md  index.md  opencode.md
docs/api/: auth.md  backends.md  benchmark.md  examples.md  harness.md  index.md  lean.md  platform.md  provers.md  verify.md
docs/api/core/: index.md
docs/compute_backend/: docker.md  modal.md
docs/development/: adding_a_dataset.md  adding_a_prover.md  index.md  testing.md
docs/guides/: benchmark.md  index.md
docs/harnesses/: index.md  opencode.md
docs/provers/: agent.md  aristotle.md  axprover.md  axproverbase.md  claude_code.md  codex.md  deepseek.md  grok.md  index.md  kimi.md  leanstral.md  numina.md  opencode.md  vibe.md
docs/user_guide/: benchmark.md  run_provers.md
images/: Dockerfile
images/kimina/: kimina_generate.py
src/open_afps/: __init__.py  __main__.py  api.py
src/open_afps/backends/: base.py  docker.py  modal.py
src/open_afps/core/: prover.py  result.py  task.py  verifier.py
src/open_afps/harness/: _paths.py  axprover.py  base.py  bundles.py  codex.py  vibe.py
src/open_afps/provers/: __init__.py  agent_prover.py  aristotle.py  numina.py
src/open_afps/provers/agent/: __init__.py  cost.py  harness.py  prover.py
src/open_afps/provers/agent/assets/configs/: mcp.json
src/open_afps/provers/agent/assets/scripts/: axprover_agent.sh  claude_code_agent.sh  codex_agent.sh  opencode_agent.sh
src/open_afps/provers/agent/assets/skills/filling-sorrys/: SKILL.md
src/open_atp/: __init__.py  __main__.py  _capture.py  auth.py  benchmark.py  config.py  lean.py  verify.py
src/open_atp/backends/: __init__.py  base.py  docker.py  modal.py
src/open_atp/examples/: __init__.py
src/open_atp/harness/: __init__.py  _catalog.py  _numina.py  _paths.py  axprover.py  axproverbase.py  base.py  claude_code.py  codex.py  cost.py  grok.py  kimi.py  opencode.py  vibe.py
src/open_atp/harness/assets/scripts/: grok_acp.py  grok_agent.sh  kimi_agent.sh  opencode_agent.sh  vibe_agent.sh
src/open_atp/harness/assets/vibe/: lean-labs.toml
src/open_atp/images/: __init__.py
src/open_atp/provers/: __init__.py  agent_prover.py  aristotle.py  base.py  numina.py  numina_tracker.py  registry.py
tests/: conftest.py  test_agent_capabilities.py  test_agent_prover.py  test_api.py  test_aristotle_live.py  test_aristotle_prover.py  test_auth.py  test_axprover_harness.py  test_benchmark.py  test_capture.py  test_cli.py  test_config.py  test_e2e_provers.py  test_kimina_prover.py  test_modal_backend.py  test_vibe_harness.py
tests/backends/: test_docker.py  test_modal.py
tests/fixtures/agent_streams/: claude_code.jsonl
tests/fixtures/mil_trivial/: lake-manifest.json  lakefile.toml
tests/harness/: test_auth_failure.py  test_axprover.py  test_axprover_base.py  test_capabilities.py  test_grok_acp.py  test_kimi.py  test_opencode.py  test_vibe.py
tests/provers/: test_agent_prover.py  test_aristotle.py  test_numina.py
tests/verify/: test_compat.py  test_verify.py  test_verify_timeout.py
