[project]
name = "open-afps"
version = "0.0.1"
description = "Open Automated Formal Proof Synthesis: upload Lean files with sorrys, get verified completed proofs across multiple proving backends."
requires-python = ">=3.12"
dependencies = [
    "jinja2>=3.1",
    "modal>=1.5",
    "aristotlelib",
    # Numina helper skills call out to these providers.
    "lean-explore>=1.2.1",
    "google-genai>=1.44.0",
    "openai>=2.7.1",
    "anthropic>=0.75.0",
]

[project.optional-dependencies]
dev = ["mypy", "pytest", "pytest-cov", "ruff", "python-dotenv"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/open_afps"]

# Vendored agent assets (launch scripts, MCP config, skills) are package data the
# AgentProver copies into each workdir; ship them in the wheel.
[tool.hatch.build.targets.wheel.force-include]
"src/open_afps/provers/agent/assets" = "open_afps/provers/agent/assets"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
strict = true
files = ["src/open_afps"]

# Third-party deps that ship no type information (no py.typed).
[[tool.mypy.overrides]]
module = ["aristotlelib.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
# Exclude the live (billable) credentialed tests by default; opt in by marker.
addopts = "-m 'not aristotle_api and not agent_api'"
markers = [
    "docker: tests that require the open-afps Docker image (opt-out: -m 'not docker')",
    "modal: tests that launch a Modal sandbox (opt-out: -m 'not modal')",
    "aristotle_api: live Aristotle API test (opt-in: run with -m aristotle_api)",
    "agent_api: live agent CLI test, billable + needs creds (opt-in: -m agent_api)",
]
