[project]
name = "open-atp"
version = "0.4.1"
description = "Open Automated Theorem Proving: upload Lean files with sorrys, get verified completed proofs across multiple proving backends."
readme = "README.md"
authors = [{ name = "Henry Robbins", email = "hwr@stanford.edu" }]
license = "MIT"
license-files = ["LICENSE"]
keywords = ["lean", "mathlib", "theorem-proving", "automated-theorem-proving", "llm", "formal-verification"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.11"
dependencies = [
    "jinja2>=3.1",
    "modal>=1.5",
    "aristotlelib",
    "pyyaml",  # `open-atp benchmark` reads a YAML provers config
    "structlog",  # benchmark sweep logging
    "tqdm",  # benchmark progress bar
    "rich",  # benchmark result table
    # Numina helper skills call out to these providers.
    "lean-explore>=1.2.1",
    "google-genai>=1.44.0",
    "openai>=2.7.1",
    "anthropic>=0.75.0",
]

[project.urls]
Homepage = "https://open-atp.henryrobbins.com"
Documentation = "https://open-atp.readthedocs.io"
Repository = "https://github.com/henryrobbins/open-atp"
Issues = "https://github.com/henryrobbins/open-atp/issues"

[project.optional-dependencies]
dev = [
    "mypy",
    "pytest",
    "pytest-cov",
    "pytest-xdist>=3.5",
    "ruff",
    "python-dotenv",
]
docs = [
    "sphinx>=7,<9",  # furo 2025.12.19 breaks on Sphinx 9.x (missing _static/pygments.css)
    "myst-parser>=3",
    "furo",
    "sphinx-autodoc-typehints",
    "sphinx-autobuild",
    "sphinx-design",
    "sphinx-argparse<0.6",  # 0.6's ArgParseDomain lacks merge_domaindata, breaking RTD parallel builds
    "numpydoc",
    "sphinxcontrib-bibtex",
]

[project.scripts]
open-atp = "open_atp.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# The vendored agent assets (launch scripts, MCP config, skills) live under the
# package directory, so ``packages`` already ships them in the wheel as package data.
# (A ``force-include`` here would re-add them at the same path and crash the build.)
[tool.hatch.build.targets.wheel]
packages = ["src/open_atp"]

# The Numina bundle (skills + prompts) lives at the repo root, outside the package
# tree, so force-include it into the package as data. Mapping to a *different* dest
# than its source path means it does not collide with ``packages`` above.
# NuminaProver resolves it at runtime (open_atp/vendor/numina in a wheel, repo-root
# vendor/numina in a source checkout).
[tool.hatch.build.targets.wheel.force-include]
"vendor/numina" = "open_atp/vendor/numina"
# Host-agnostic skills (leanprover/skills) and the Claude `lean4` plugin
# (lean4-skills), resolved at runtime by open_atp.harness._paths the same way as
# numina (open_atp/vendor/<name> in a wheel, repo-root vendor/<name> in a checkout).
"vendor/leanprover-skills" = "open_atp/vendor/leanprover-skills"
"vendor/lean4-skills" = "open_atp/vendor/lean4-skills"

[tool.ruff]
line-length = 88
# Vendored third-party code keeps its upstream style; lint only our own sources.
extend-exclude = ["vendor"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
strict = true
files = ["src/open_atp"]
python_version = "3.11"

# Third-party deps that ship no type information (no py.typed).
[[tool.mypy.overrides]]
module = ["aristotlelib.*", "yaml", "tqdm"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests", "src/open_atp"]
# Exclude the live (billable) credentialed tests by default; opt in by marker.
# Run across 5 workers (pytest-xdist) so the slow Docker/Modal/agent suites
# parallelise; mirrors flare. Override with e.g. `-n 0` for serial debugging.
# ``--doctest-modules`` runs the ``>>>`` examples in source docstrings (e.g.
# get_prover); construction-only examples stay offline. Mirrors flare.
addopts = "-m 'not docker and not modal and not aristotle_api and not agent_api and not numina_api' -n 5 --doctest-modules --import-mode=importlib"
markers = [
    "docker: tests that require the open-atp Docker image (opt-out: -m 'not docker')",
    "modal: tests that launch a Modal sandbox (opt-out: -m 'not modal')",
    "aristotle_api: live Aristotle API test (opt-in: run with -m aristotle_api)",
    "agent_api: live agent CLI test, billable + needs creds (opt-in: -m agent_api)",
    "numina_api: live NuminaProver test, billable + needs creds (opt-in: -m numina_api)",
]
